name:                imj-serve-highscores
version:             0.1.0.3
Category:            WebService
Synopsis:            Provides read/write access to Hamazed game high scores.
Description:         Provides access to persistent high scores for the Hamazed game.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-serve-highscores/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  include-dirs:        include
  other-modules:
  exposed-modules:     Imj.Game.HighScores.API
                     , Imj.Game.HighScores.Client
                     , Imj.Game.HighScores.Server
                     , Imj.Game.HighScores.Server.Args
  build-depends:       base >= 4.9 && < 4.12
                     , base-compat >=0.9 && < 0.11
                     , aeson >= 1.2 && < 1.4
                     , aeson-compat == 0.3.*
                     , async >=2.1 && < 2.3
                     , attoparsec ==0.13.*
                     , binary == 0.8.*
                     , blaze-html ==0.9.*
                     , blaze-markup ==0.8.*
                     , bytestring == 0.10.*
                     , containers ==0.5.*
                     , deepseq ==1.4.*
                     , directory ==1.3.*
                     , http-media ==0.7.*
                     , http-client ==0.5.*
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
                     , imj-time ==0.1.*
                     , lucid ==2.9.*
                     , mtl >= 2.2.1 && < 2.3
                     , optparse-applicative == 0.14.*
                     , servant ==0.13.*
                     , servant-client ==0.13.*
                     , servant-server ==0.13.*
                     , stm ==2.4.*
                     , strict-concurrency ==0.2.*
                     , string-conversions ==0.4.*
                     , text >=1.2.3 && < 1.3
                     , time >=1.8 && < 1.10
                     , transformers == 0.5.*
                     , unliftio ==0.2.*
                     , unliftio-core ==0.1.*
                     , wai ==3.2.*
                     , warp ==3.2.*
  default-language:    Haskell2010

executable imj-serve-highscores-exe
  hs-source-dirs:      app
  other-modules:
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.12
                     , imj-serve-highscores
                     , mtl >= 2.2.1 && < 2.3
  default-language:    Haskell2010

test-suite imj-serve-highscores-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 4.12
                     , ansi-terminal >=0.7 && < 0.9
                     , bytestring == 0.10.*
                     , containers ==0.5.*
                     , FTGL ==2.1.*
                     , freetype2 ==0.1.*
                     , imj-serve-highscores
                     , imj-prelude ==0.1.*
                     , imj-time ==0.1.*
                     , mtl >= 2.2.1 && < 2.3
                     , text >=1.2.3 && < 1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-serve-highscores
