name:                imj-serve-highscores
version:             0.1.0.3
Category:            WebService
Synopsis:            Provides read/write access to Hamazed game high scores.
Description:         Provides access to persistent high scores for the Hamazed game.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-serve-highscores/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.2.2, GHC == 8.4.3

library
  hs-source-dirs:      src
  include-dirs:        include
  other-modules:
  exposed-modules:     Imj.Game.HighScores.API
                     , Imj.Game.HighScores.Client
                     , Imj.Game.HighScores.Server
                     , Imj.Game.HighScores.Server.Args
  build-depends:       base >= 4.9 && < 4.13
                     , base-compat >=0.9 && < 0.11
                     , binary == 0.8.*
                     , bytestring == 0.10.*
                     , postgresql-simple ==0.5.*
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
                     , optparse-applicative == 0.14.*
                     , resource-pool == 0.2.*
                     , servant >=0.13 && < 0.15
                     , servant-client >=0.13 && < 0.15
                     , servant-server >=0.13 && < 0.15
                     , wai ==3.2.*
                     , warp ==3.2.*
  default-language:    Haskell2010

executable imj-serve-highscores-exe
  hs-source-dirs:      app
  other-modules:
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.13
                     , imj-serve-highscores
  default-language:    Haskell2010

test-suite imj-serve-highscores-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 4.13
                     , imj-prelude ==0.1.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-serve-highscores
