name:                imj-server
version:             0.1.0.3
Category:            Networking
Synopsis:            A library factorizing common server aspects.
Description:         A library handling client connections, communication wuth clients.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-server//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imj.ClientServer.Class
                     , Imj.Client.Class
                     , Imj.Client
                     , Imj.Client.Types
                     , Imj.Server
                     , Imj.Server.Connection
                     , Imj.Server.Types
                     , Imj.Server.Internal.Types
                     , Imj.Server.Log
  build-depends:       base >= 4.9 && < 4.12
                     , array == 0.5.*
                     , async >=2.1 && < 2.3
                     , attoparsec ==0.13.*
                     , binary ==0.8.*
                     , bytestring == 0.10.*
                     , containers ==0.5.*
                     , deepseq ==1.4.*
                     , file-embed ==0.0.*
                     , imj-bindings-audio ==0.1.*
                     , imj-music ==0.1.*
                     , imj-particlesystem ==0.1.*
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
                     , mwc-random ==0.13.*
                     , mtl >= 2.2.1 && < 2.3
                     , network ==2.6.*
                     , optparse-applicative == 0.14.*
                     , primitive ==0.6.*
                     , stm ==2.4.*
                     , strict-concurrency ==0.2.*
                     , terminal-size >= 0.3.2.1 && < 0.4
                     , text >=1.2.3 && < 1.3
                     , unix ==2.7.*
                     , unliftio ==0.2.*
                     , unliftio-core ==0.1.*
                     , vector >= 0.12.0.1 && < 0.13
                     , vector-th-unbox == 0.2.*
                     , websockets ==0.12.*
  default-language:    Haskell2010

test-suite imj-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 4.12
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-server
