name:                imj-space
version:             0.1.0.3
Category:            GameEngine, Topology
Synopsis:            A library to create discrete 2D spaces with topological constraints.
Description:         Spaces can be created with topological constraints like number of connected components.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-space//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imj.Space
                     , Imj.Space.Draw
                     , Imj.Space.Strategies
                     , Imj.Space.Types
  build-depends:       base >= 4.9 && < 4.12
                     , array == 0.5.*
                     , async >=2.1 && < 2.3
                     , binary ==0.8.*
                     , bytestring == 0.10.*
                     , containers ==0.5.*
                     , deepseq ==1.4.*
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
                     , imj-time ==0.1.*
                     , mwc-random ==0.13.*
                     , mtl >= 2.2.1 && < 2.3
                     , primitive ==0.6.*
                     , template-haskell >=2.12 && < 2.14
                     , text >=1.2.3 && < 1.3
                     , vector >= 0.12.0.1 && < 0.13
                     , vector-th-unbox == 0.2.*
  default-language:    Haskell2010

test-suite imj-space-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Imj.Topology
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 4.12
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
                     , imj-space
                     , mwc-random ==0.13.*
                     , primitive ==0.6.*
                     , vector >= 0.12.0.1 && < 0.13
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-space
