name:                imj-time
version:             0.1.0.3
Category:            Time
Synopsis:            Time functions
Description:         Time functions
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-time/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.2.2, GHC == 8.4.3

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imj.Timing
  build-depends:       base >= 4.9 && < 4.12
                     , binary == 0.8.*
                     , clock ==0.7.*
                     , imj-prelude ==0.1.*
                     , template-haskell >=2.12 && < 2.14
                     , text >=1.2.3 && < 1.3
  default-language:    Haskell2010

test-suite imj-time-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Imj.Timing
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 4.12
                     , imj-prelude ==0.1.*
                     , imj-time
                     , clock ==0.7.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-time
